# fluir

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  justfile  rustfmt.toml  tailwind.config.js
.devcontainer/: docker-compose.yml
.gitea/workflows/: ci.yaml
migrations/2024-01-12-053956_create_posts/: up.sql
src/: app.rs  main.rs  middleware.rs
src/models/: post.rs
src/routes/: admin.rs  home.rs  mod.rs  posts.rs
src/utils/: db.rs
templates/: base.html  index.html
templates/posts/: new.html
templates/views/: error.html
