[package]
name = "fluir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros", "tracing", "form"] }
diesel = { version = "2.1.4", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
serde = { version = "1.0.195", features = ["derive"] }
tera = "1.19.1"
tokio = { version = "1.35.1", features = ["full"] }
tower-livereload = "0.9.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
